--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
-title: "Cloudless Skies: Decentralizing Mobile Interaction"
-description: "Workshop at MobileHCI 2020, October 5th, Oldenburg, Germany"
+title: ""
+description: "Cloudless Skies: Decentralizing Mobile Interaction. Workshop at MobileHCI 2020, October 5th, Oldenburg, Germany"
 
 logo: "cloudless.png"
 show_downloads: false
